@@ -1,3 +1,12 @@
+2012-08-14  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mount.cc (fs_names): Add missing ReFS entry.  Change comment.
+	* mount.h (enum fs_info_type): Add comment.
+
+2012-08-13  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
+	* errno.cc (errmap): Map ERROR_SXS_CANT_GEN_ACTCTX to ELIBBAD.
+
 2012-08-13  Corinna Vinschen  <corinna@vinschen.de>
 
 	* include/cygwin/stat.h (struct __stat64): Drop entirely in favor of
